feat: add cryptography to user password before store at database
