# api-service/src/domain/entities/User.ts
@@ -2,7 +2,7 @@ import { NonFunctionProperties } from "../../application/contracts/types";
 import { RoleEnum } from "../enums/Role";
 import { v4 as uuid } from "uuid";
 
-type CreateUserParams = Omit<NonFunctionProperties<User>, "createdAt" | "id" | "password">;
+type CreateUserParams = Omit<NonFunctionProperties<User>, "createdAt" | "id">;
 
 export class User {
   public readonly email: string;
@@ -22,7 +22,7 @@ export class User {
   public static create(data: CreateUserParams): User {
     return new User({
       email: data.email,
-      password: uuid(),
+      password: data.password,
       role: data.role,
       createdAt: new Date(),
       id: uuid(),
